news has been added to swagger
