# SkillFactory_News/internal/api/api.go
@@ -51,7 +51,7 @@ func NewAPI(opts *Opts) *API {
 
 func (api *API) setupEndpoints() {
 	api.router.GET("api/feeds/:limit", api.Feeds)
-	api.router.GET("api/feed/:id", api.FeedById)
+	api.router.GET("api/feed/:id", api.FeedsById)
 	api.router.POST("api/feeds", api.FeedsByFilter)
 }
 
